--- a/server/package.json
+++ b/server/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.19",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^18.7.13"
+    "@types/node": "^18.7.13",
+    "nodemon": "^2.0.19"
   }
 }
