--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.5.3",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   },
