--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "nodemailer": "^6.7.8",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "uuid": "^8.3.2"
