--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "baseUrl": "src/client",
+    "baseUrl": "./src",
     "lib": [
       "dom",
       "dom.iterable",
