--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.7.13",
+    "eslint": "8.22.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.19"
   }
 }
