--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.7.8",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
